--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,40 +9,58 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="goldengirls.strip.vlasenko.goldengirls.ProfileFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/frag_a"
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/frag_prof_all"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-        <ImageView
-            android:id="@+id/userAvatar"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_alignParentLeft="true" />
+        <TableRow>
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/layout21"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:padding="10dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/userName"
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/frag_a"
                 android:layout_width="fill_parent"
-                android:layout_height="50dp" />
-            <TextView
-                android:id="@+id/userBalance"
+                android:layout_height="200dp">
+
+                <ImageView
+                    android:id="@+id/userAvatar"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_alignParentLeft="true" />
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/layout21"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/userName"
+                        android:layout_width="fill_parent"
+                        android:layout_height="50dp" />
+
+                    <TextView
+                        android:id="@+id/userStatus"
+                        android:layout_width="fill_parent"
+                        android:layout_height="50dp" />
+
+                    <TextView
+                        android:id="@+id/userBalance"
+                        android:layout_width="fill_parent"
+                        android:layout_height="50dp" />
+
+                </LinearLayout>
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow>
+
+            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/archieves"
                 android:layout_width="fill_parent"
-                android:layout_height="50dp" />
+                android:layout_height="200dp"></TableLayout>
 
-            <TextView
-                android:id="@+id/userStatus"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp" />
-        </LinearLayout>
-
-
-    </LinearLayout>
+        </TableRow>
+    </TableLayout>
 
 </RelativeLayout>
