--- a/app/src/main/res/menu/activity_profile_drawer.xml
+++ b/app/src/main/res/menu/activity_profile_drawer.xml
@@ -5,26 +5,30 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_profile"
-            android:icon="@android:drawable/ic_menu_view"
-            android:title="Profile" />
+            android:icon="@drawable/ic_profile"
+            android:title="Профиль" />
         <item
             android:id="@+id/nav_clubs"
-            android:icon="@android:drawable/ic_menu_myplaces"
-            android:title="My clubs" />
+            android:icon="@drawable/ic_megaphone"
+            android:title="Сегодня в клубе" />
         <item
             android:id="@+id/nav_history"
-            android:icon="@android:drawable/ic_menu_recent_history"
-            android:title="My history" />
+            android:icon="@drawable/ic_history"
+            android:title="Моя история" />
+        <item
+            android:id="@+id/nav_quests"
+            android:icon="@drawable/ic_history"
+            android:title="Задания" />
         <item
             android:id="@+id/nav_qrcode"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_qr"
             android:title="QR Code" />
 
         <!--для менеджера-->
         <item
             android:id="@+id/nav_scan_qrcode"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="SCAN QR Code" />
+            android:icon="@drawable/ic_scanner"
+            android:title="QR Code Сканер" />
     </group>
 
 </menu>
