--- a/app/src/main/res/menu/activity_profile_drawer.xml
+++ b/app/src/main/res/menu/activity_profile_drawer.xml
@@ -20,6 +20,10 @@
             android:icon="@drawable/ic_history"
             android:title="Задания" />
         <item
+            android:id="@+id/nav_balance"
+            android:icon="@drawable/in_money"
+            android:title="Пополнить счет" />
+        <item
             android:id="@+id/nav_qrcode"
             android:icon="@drawable/ic_qr"
             android:title="QR Code" />
