--- a/app/src/main/res/menu/activity_profile_drawer.xml
+++ b/app/src/main/res/menu/activity_profile_drawer.xml
@@ -20,9 +20,13 @@
             android:icon="@drawable/ic_history"
             android:title="Моя история" />
         <item
-            android:id="@+id/nav_quests"
+        android:id="@+id/nav_quests"
+        android:icon="@drawable/ic_history"
+        android:title="Задания" />
+        <item
+            android:id="@+id/nav_wife"
             android:icon="@drawable/ic_history"
-            android:title="Задания" />
+            android:title="Защита от жены" />
         <item
             android:id="@+id/nav_balance"
             android:icon="@drawable/in_money"
