--- a/app/src/main/res/layout/one_history_view.xml
+++ b/app/src/main/res/layout/one_history_view.xml
@@ -23,13 +23,13 @@
             android:id="@+id/history_action_text"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/history_action_time"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
-            android:textSize="5dp"
+            android:textSize="15sp"
             android:text="18-10-2016"/>
     </LinearLayout>
 
